--- a/notebooks/05_autoregressive/01_lstm/lstm.ipynb
+++ b/notebooks/05_autoregressive/01_lstm/lstm.ipynb
@@ -2,6 +2,16 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/durgeshM-ai/Data-Science-Projects/blob/master/notebooks/05_autoregressive/01_lstm/lstm.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "b076bd1a-b236-4fbc-953d-8295b25122ae",
       "metadata": {
         "id": "b076bd1a-b236-4fbc-953d-8295b25122ae"
@@ -92,12 +102,8 @@
       "outputs": [],
       "source": [
         "# Load the full dataset\n",
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')\n",
-        "\n",
-        "path = \"/content/drive/MyDrive/datasets/full_format_recipes.json\"\n",
-        "with open(path) as json_data:\n",
-        "    recipe_data = json.load(json_data"
+        "with open(\"/app/data/epirecipes/full_format_recipes.json\") as json_data:\n",
+        "    recipe_data = json.load(json_data)"
       ]
     },
     {
@@ -597,7 +603,8 @@
       "version": "3.8.10"
     },
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     }
   },
   "nbformat": 4,
