--- a/notebooks/05_autoregressive/01_lstm/lstm.ipynb
+++ b/notebooks/05_autoregressive/01_lstm/lstm.ipynb
@@ -187,12 +187,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 30,
       "id": "b87d7c65-9a46-492a-a5c0-a043b0d252f3",
       "metadata": {
-        "id": "b87d7c65-9a46-492a-a5c0-a043b0d252f3"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 144
+        },
+        "id": "b87d7c65-9a46-492a-a5c0-a043b0d252f3",
+        "outputId": "d03e959f-cc0d-4835-9a64-4b4a4d1c4031"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Recipe for Ham Persillade with Mustard Potato Salad and Mashed Peas | Chop enough parsley leaves to measure 1 tablespoon ; reserve . Chop remaining leaves and stems and simmer with broth and garlic in a small saucepan , covered , 5 minutes . Meanwhile , sprinkle gelatin over water in a medium bowl and let soften 1 minute . Strain broth through a fine - mesh sieve into bowl with gelatin and stir to dissolve . Season with salt and pepper . Set bowl in an ice bath and cool to room temperature , stirring . Toss ham with reserved parsley and divide among jars . Pour gelatin on top and chill until set , at least 1 hour . Whisk together mayonnaise , mustard , vinegar , 1 / 4 teaspoon salt , and 1 / 4 teaspoon pepper in a large bowl . Stir in celery , cornichons , and potatoes . Pulse peas with marjoram , oil , 1 / 2 teaspoon pepper , and 1 / 4 teaspoon salt in a food processor to a coarse mash . Layer peas , then potato salad , over ham . '"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 30
+        }
+      ],
       "source": [
         "# Display an example of a recipe\n",
         "example_data = text_data[9]\n",
@@ -201,7 +220,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 31,
       "id": "9834f916-b21a-4104-acc9-f28d3bd7a8c1",
       "metadata": {
         "tags": [],
@@ -219,7 +238,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 32,
       "id": "884c0bcb-0807-45a1-8f7e-a32f2c6fa4de",
       "metadata": {
         "id": "884c0bcb-0807-45a1-8f7e-a32f2c6fa4de"
@@ -237,7 +256,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 33,
       "id": "4d6dd34a-d905-497b-926a-405380ebcf98",
       "metadata": {
         "id": "4d6dd34a-d905-497b-926a-405380ebcf98"
@@ -251,12 +270,33 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 34,
       "id": "f6c1c7ce-3cf0-40d4-a3dc-ab7090f69f2f",
       "metadata": {
-        "id": "f6c1c7ce-3cf0-40d4-a3dc-ab7090f69f2f"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "f6c1c7ce-3cf0-40d4-a3dc-ab7090f69f2f",
+        "outputId": "407a6d75-233f-42f4-fbb8-9cfefdfc4bf0"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0: \n",
+            "1: [UNK]\n",
+            "2: .\n",
+            "3: ,\n",
+            "4: and\n",
+            "5: to\n",
+            "6: in\n",
+            "7: the\n",
+            "8: with\n",
+            "9: a\n"
+          ]
+        }
+      ],
       "source": [
         "# Display some token:word mappings\n",
         "for i, word in enumerate(vocab[:10]):\n",
@@ -265,12 +305,38 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 35,
       "id": "1cc30186-7ec6-4eb6-b29a-65df6714d321",
       "metadata": {
-        "id": "1cc30186-7ec6-4eb6-b29a-65df6714d321"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1cc30186-7ec6-4eb6-b29a-65df6714d321",
+        "outputId": "58c29c92-5187-4db5-f48c-bc5d98a92773"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[  26   16  557    1    8  298  335  189    4 1054  494   27  332  228\n",
+            "  235  262    5  594   11  133   22  311    2  332   45  262    4  671\n",
+            "    4   70    8  171    4   81    6    9   65   80    3  121    3   59\n",
+            "   12    2  299    3   88  650   20   39    6    9   29   21    4   67\n",
+            "  529   11  164    2  320  171  102    9  374   13  643  306   25   21\n",
+            "    8  650    4   42    5  931    2   63    8   24    4   33    2  114\n",
+            "   21    6  178  181 1245    4   60    5  140  112    3   48    2  117\n",
+            "  557    8  285  235    4  200  292  980    2  107  650   28   72    4\n",
+            "  108   10  114    3   57  204   11  172    2   73  110  482    3  298\n",
+            "    3  190    3   11   23   32  142   24    3    4   11   23   32  142\n",
+            "   33    6    9   30   21    2   42    6  353    3 3224    3    4  150\n",
+            "    2  437  494    8 1281    3   37    3   11   23   15  142   33    3\n",
+            "    4   11   23   32  142   24    6    9  291  188    5    9  412  572\n",
+            "    2  230  494    3   46  335  189    3   20  557    2    0    0    0\n",
+            "    0    0    0    0    0]\n"
+          ]
+        }
+      ],
       "source": [
         "# Display the same example converted to ints\n",
         "example_tokenised = vectorize_layer(example_data)\n",
@@ -289,7 +355,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 36,
       "id": "740294a1-1a6b-4c89-92f2-036d7d1b788b",
       "metadata": {
         "id": "740294a1-1a6b-4c89-92f2-036d7d1b788b"
@@ -321,12 +387,103 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 37,
       "id": "9230b5bf-b4a8-48d5-b73b-6899a598f296",
       "metadata": {
-        "id": "9230b5bf-b4a8-48d5-b73b-6899a598f296"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 272
+        },
+        "id": "9230b5bf-b4a8-48d5-b73b-6899a598f296",
+        "outputId": "7258dfe4-c6fd-4440-d54f-0ea0758ffa80"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "\u001b[1mModel: \"functional\"\u001b[0m\n"
+            ],
+            "text/html": [
+              "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\">Model: \"functional\"</span>\n",
+              "</pre>\n"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━┓\n",
+              "┃\u001b[1m \u001b[0m\u001b[1mLayer (type)                   \u001b[0m\u001b[1m \u001b[0m┃\u001b[1m \u001b[0m\u001b[1mOutput Shape          \u001b[0m\u001b[1m \u001b[0m┃\u001b[1m \u001b[0m\u001b[1m      Param #\u001b[0m\u001b[1m \u001b[0m┃\n",
+              "┡━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━┩\n",
+              "│ input_layer (\u001b[38;5;33mInputLayer\u001b[0m)        │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;45mNone\u001b[0m)           │             \u001b[38;5;34m0\u001b[0m │\n",
+              "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
+              "│ embedding (\u001b[38;5;33mEmbedding\u001b[0m)           │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m100\u001b[0m)      │     \u001b[38;5;34m1,000,000\u001b[0m │\n",
+              "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
+              "│ lstm (\u001b[38;5;33mLSTM\u001b[0m)                     │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m128\u001b[0m)      │       \u001b[38;5;34m117,248\u001b[0m │\n",
+              "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
+              "│ dense (\u001b[38;5;33mDense\u001b[0m)                   │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m10000\u001b[0m)    │     \u001b[38;5;34m1,290,000\u001b[0m │\n",
+              "└─────────────────────────────────┴────────────────────────┴───────────────┘\n"
+            ],
+            "text/html": [
+              "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━┓\n",
+              "┃<span style=\"font-weight: bold\"> Layer (type)                    </span>┃<span style=\"font-weight: bold\"> Output Shape           </span>┃<span style=\"font-weight: bold\">       Param # </span>┃\n",
+              "┡━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━┩\n",
+              "│ input_layer (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">InputLayer</span>)        │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>)           │             <span style=\"color: #00af00; text-decoration-color: #00af00\">0</span> │\n",
+              "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
+              "│ embedding (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Embedding</span>)           │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">100</span>)      │     <span style=\"color: #00af00; text-decoration-color: #00af00\">1,000,000</span> │\n",
+              "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
+              "│ lstm (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">LSTM</span>)                     │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">128</span>)      │       <span style=\"color: #00af00; text-decoration-color: #00af00\">117,248</span> │\n",
+              "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
+              "│ dense (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Dense</span>)                   │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">10000</span>)    │     <span style=\"color: #00af00; text-decoration-color: #00af00\">1,290,000</span> │\n",
+              "└─────────────────────────────────┴────────────────────────┴───────────────┘\n",
+              "</pre>\n"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "\u001b[1m Total params: \u001b[0m\u001b[38;5;34m2,407,248\u001b[0m (9.18 MB)\n"
+            ],
+            "text/html": [
+              "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\"> Total params: </span><span style=\"color: #00af00; text-decoration-color: #00af00\">2,407,248</span> (9.18 MB)\n",
+              "</pre>\n"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "\u001b[1m Trainable params: \u001b[0m\u001b[38;5;34m2,407,248\u001b[0m (9.18 MB)\n"
+            ],
+            "text/html": [
+              "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\"> Trainable params: </span><span style=\"color: #00af00; text-decoration-color: #00af00\">2,407,248</span> (9.18 MB)\n",
+              "</pre>\n"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "\u001b[1m Non-trainable params: \u001b[0m\u001b[38;5;34m0\u001b[0m (0.00 B)\n"
+            ],
+            "text/html": [
+              "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\"> Non-trainable params: </span><span style=\"color: #00af00; text-decoration-color: #00af00\">0</span> (0.00 B)\n",
+              "</pre>\n"
+            ]
+          },
+          "metadata": {}
+        }
+      ],
       "source": [
         "inputs = layers.Input(shape=(None,), dtype=\"int32\")\n",
         "x = layers.Embedding(VOCAB_SIZE, EMBEDDING_DIM)(inputs)\n",
@@ -338,7 +495,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 38,
       "id": "800a3c6e-fb11-4792-b6bc-9a43a7c977ad",
       "metadata": {
         "tags": [],
@@ -363,7 +520,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 39,
       "id": "ffb1bd3b-6fd9-4536-973e-6375bbcbf16d",
       "metadata": {
         "id": "ffb1bd3b-6fd9-4536-973e-6375bbcbf16d"
@@ -376,7 +533,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 40,
       "id": "3ddcff5f-829d-4449-99d2-9a3cb68f7d72",
       "metadata": {
         "id": "3ddcff5f-829d-4449-99d2-9a3cb68f7d72"
@@ -418,7 +575,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 42,
       "id": "349865fe-ffbe-450e-97be-043ae1740e78",
       "metadata": {
         "id": "349865fe-ffbe-450e-97be-043ae1740e78"
@@ -427,7 +584,7 @@
       "source": [
         "# Create a model save checkpoint\n",
         "model_checkpoint_callback = callbacks.ModelCheckpoint(\n",
-        "    filepath=\"./checkpoint/checkpoint.ckpt\",\n",
+        "    filepath=\"./checkpoint/checkpoint.ckpt.weights.h5\",\n",
         "    save_weights_only=True,\n",
         "    save_freq=\"epoch\",\n",
         "    verbose=0,\n",
@@ -445,9 +602,28 @@
       "id": "461c2b3e-b5ae-4def-8bd9-e7bab8c63d8e",
       "metadata": {
         "tags": [],
-        "id": "461c2b3e-b5ae-4def-8bd9-e7bab8c63d8e"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "461c2b3e-b5ae-4def-8bd9-e7bab8c63d8e",
+        "outputId": "59bd44f1-7db0-45fd-daf7-54e562aa5809"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/25\n",
+            "\u001b[1m629/629\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 3s/step - loss: 4.9827\n",
+            "generated text:\n",
+            "recipe for decorative saucepan with - overpack over tube will orange gelatin and sprinkle white a blood cup thinnish | transfer oil and 3 salted cheese . dredge fries with onions , lifting chicken with the noodles dough on half . heat with large stream , mustard and olive broth and beat flour into heat until electric temperature fitted ( splash of another ) . bring food time 1 and taste . transfer cream asparagus . add preheated a foamy and tie sift is freshly skillet \n",
+            "\n",
+            "\u001b[1m629/629\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1608s\u001b[0m 3s/step - loss: 4.9814\n",
+            "Epoch 2/25\n",
+            "\u001b[1m 34/629\u001b[0m \u001b[32m━\u001b[0m\u001b[37m━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[1m24:25\u001b[0m 2s/step - loss: 3.1407"
+          ]
+        }
+      ],
       "source": [
         "lstm.fit(\n",
         "    train_ds,\n",
